--- a/Styling/index.css
+++ b/Styling/index.css
@@ -87,3 +87,27 @@ body{
      bottom: 0;
      width: 100%;
 }
+
+/* Product Page styling*/
+
+.s-buttons {
+    display: flex;
+    gap: 10px; 
+}
+
+.s-buttons input{
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.s-buttons button{
+    padding: 10px;
+    background-color: #6a6e10;
+    color: white; 
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.s-buttons button:hover{
+    background-color: #8B4513;
+}
