--- a/Styling/index.css
+++ b/Styling/index.css
@@ -1,7 +1,7 @@
 /* Home Page and Nav bar styling*/
 header{
     color: #5a3d16;
-    background-color: black;
+    background-color: #b76802;
 }
 
 nav a{
@@ -34,7 +34,7 @@ footer{
     bottom: 5%;
     right: 5%;
 }
-
+/*footer styling*/
 #footer{
     background-color: #8b5a2b;
     color: #fff;
@@ -65,7 +65,6 @@ body{
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border: 5px solid #8b5a2b; /* Dark brown border to simulate torn edges */
     border-radius: 10px;
 }
@@ -77,7 +76,7 @@ body{
 .aboutContent-container p{
     line-height: 1.6;
 }
-
+/* some more footer styling*/
 #footerLook{
      background-color: #8b5a2b;
      color: #fff;
@@ -112,3 +111,55 @@ body{
     background-color: #8B4513;
 }
 
+/* Contact Page styling*/
+.contact-form {
+    background-color: #8B4513;
+    width: 50%;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+.send-message button{
+    padding: 10px;
+    background-color: #6a6e10;
+    color: white; 
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.send-message button:hover{
+    background-color: #8B4513;
+}
+
+.tagline{
+    text-shadow: #966a32;
+}
+
+h2{
+    color: #2e1d0c;
+}
+
+/* 
+} */
+
+
+#wUs{
+    color: Red;
+    text-align: center;
+    font-family: Sofia;
+    font-size: larger;
+    font-weight: bold;
+}
+#wUs{
+    color: rgba(106, 56, 23, 0.959);
+    text-align: center;
+    font-family: Sofia;
+    font-size: larger;
+    font-weight: bold;
+} 
