--- a/Styling/index.css
+++ b/Styling/index.css
@@ -208,3 +208,12 @@ h2{
     justify-content: space-between;
     margin-bottom: 15px;
   }
+
+  /* Mobile responsiveness styling */
+
+/* media quer */
+@media screen and (max-width:700px) {
+    body{
+        background-color: rgb(250, 230, 247);
+    }
+}
